--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       Instagram
     </a>
     <a class="btn" href="https://www.facebook.com/share/1BRDSiJkK7/" target="_blank">
-      <img src="images/Facebook_icon.png" alt="Facebook" style="height: 24px; margin-right: 10px;">
+      <img src="images/facebook_icon.png" alt="Facebook" style="height: 24px; margin-right: 10px;">
       Facebook
     </a>
     <a class="btn" href="https://wa.me/message/XLTLY73TJEYQF1" target="_blank">
