--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       Facebook
     </a>
     <a class="btn" href="https://wa.me/message/XLTLY73TJEYQF1" target="_blank">
-      <img src="images/WhatsApp_icon.jpeg" alt="WhatsApp" style="height: 24px; margin-right: 10px;">
+      <img src="images/WhatsApp_icon.png" alt="WhatsApp" style="height: 24px; margin-right: 10px;">
       WhatsApp
     </a>
     <a class="btn" href="https://maps.google.com/?q=Palacios+Barber+Shop" target="_blank">📍 Google Maps</a>
