--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   box-shadow: 0 8px 24px rgba(0,0,0,0.1);
   max-width: 400px;
   min-width: 200px;
-  min-height: 480px;
+  height: 480px;
   width: 90%;
   color: white;
   overflow: hidden;
