--- a/index.html
+++ b/index.html
@@ -37,19 +37,18 @@
   content: "";
   position: absolute;
   inset: 0;
-  background: url("images/fondo3.jpg") center/cover no-repeat;
-  opacity: 0.2; /* Ajusta la opacidad aquí */
+  background: url("images/fondo2.png") center/cover no-repeat;
+  opacity: 0.5; /* Ajusta la opacidad aquí */
   z-index: -1;
   border-radius: 20px;
 }
-
 
     .buttons {
   display: flex;
   flex-direction: column;
   justify-content: space-between; /* Distribuye el espacio entre los botones */
   flex: 1;
-  margin: 25px 0; /* Margen superior e inferior */
+  margin: 162px 25px 0; /* Margen superior e inferior */
 }
 
 .btn {
@@ -64,8 +63,6 @@
   justify-content: center;
   margin: 10px 0; /* Margen entre los botones */
 }
-
-
 
     .btn:hover {
       background: #0b0904c0;
