--- a/index.html
+++ b/index.html
@@ -15,58 +15,104 @@
       justify-content: center;
       min-height: 100vh;
     }
-
-.card {
-  position: relative;
-  background: none; /* Quitamos el fondo aquí */
-  padding: 2rem;
-  border-radius: 20px;
-  box-shadow: 0 8px 24px rgba(0,0,0,0.1);
-  max-width: 400px;
-  min-width: 200px;
-  height: 480px;
-  width: 90%;
-  color: white;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  z-index: 1;
+    .card {
+  animation: fadeIn 2.5s ease-in-out;
 }
 
-.card::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background: url("images/fondo2.png") center/cover no-repeat;
-  opacity: 0.5; /* Ajusta la opacidad aquí */
-  z-index: -1;
-  border-radius: 20px;
-}
+@keyframes fadeIn {
+  from {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}   
+    .card {
+      position: relative;
+      background: none;
+      padding: 2rem;
+      border-radius: 20px;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.1);
+      max-width: 400px;
+      width: 90%;
+      min-width: 120px;
+      aspect-ratio: 3 / 4;
+      color: white;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      z-index: 1;
+    }
+
+    .card::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: url("images/fondo2.png") top center / contain no-repeat;
+      opacity: 0.5;
+      z-index: -1;
+      border-radius: 20px;
+    }
 
     .buttons {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between; /* Distribuye el espacio entre los botones */
-  flex: 1;
-  margin: 162px 25px 0; /* Margen superior e inferior */
-}
+      display: flex;
+      flex-direction: column; /* Asegura que los botones estén uno encima del otro */
+      justify-content: space-between; /* Distribuye el espacio entre los botones */
+      flex: 1;
+      margin-top: 49%; /* Espacio superior relativo */
+      padding-bottom: 5%; /* Espacio inferior para evitar que los botones se peguen al borde */
+    }
+    .btn {
+      height: 50px;
+      width: 90%; /* Mantiene el 90% del ancho de la pantalla */
+      text-decoration: none;
+      background: #1e1e1ea7;
+      color: white;
+      border-radius: 10px;
+      transition: background 0.3s ease;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
 
-.btn {
-  height: 50px; /* Tamaño fijo */
-  text-decoration: none;
-  background: #1e1e1ea7;
-  color: white;
-  border-radius: 10px;
-  transition: background 0.3s ease;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 10px 0; /* Margen entre los botones */
-}
+    .btn img {
+      height: 24px; 
+      margin-right: 10px;
+    }
 
     .btn:hover {
       background: #0b0904c0;
       color: #ffffff;
+    }
+
+@media (max-width: 323px) {
+      .buttons {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        justify-content: space-between; /* Distribuye el espacio entre los botones */
+        gap: 8px;
+        margin-top: 49%;
+      }
+      
+      .btn {
+        width: 90%;
+        height: 45px;
+        min-width: 45px;
+        justify-content: center;
+        padding: 0 5px;
+      align-items: center;
+      justify-content: center;
+      }
+      .btn span {
+        display: none;
+      }
+      
+      .btn img {
+        margin-right: 0;
+      }
     }
   </style>
 </head>
@@ -74,19 +120,23 @@
 <div class="card">
   <div class="buttons">
     <a class="btn" href="https://www.instagram.com/palacios_barber.shop?igsh=eWY2OHNpNTNoczZn" target="_blank">
-      <img src="images/Instagram_icon.png" alt="Instagram" style="height: 24px; margin-right: 10px;">
-      Instagram
+      <img src="images/Instagram_icon.png" alt="Instagram">
+      <span>Instagram</span>
     </a>
     <a class="btn" href="https://www.facebook.com/share/1BRDSiJkK7/" target="_blank">
-      <img src="images/facebook_icon.png" alt="Facebook" style="height: 24px; margin-right: 10px;">
-      Facebook
+      <img src="images/facebook_icon.png" alt="Facebook">
+      <span>Facebook</span>
     </a>
     <a class="btn" href="https://wa.me/message/XLTLY73TJEYQF1" target="_blank">
-      <img src="images/whatsapp-icon.png" alt="WhatsApp" style="height: 24px; margin-right: 10px;">
-      WhatsApp
+      <img src="images/whatsapp-icon.png" alt="WhatsApp">
+      <span>WhatsApp</span>
     </a>
-    <a class="btn" href="https://maps.google.com/?q=Palacios+Barber+Shop" target="_blank">📍 Google Maps</a>
+    <a class="btn" href="https://maps.google.com/?q=Palacios+Barber+Shop" target="_blank">
+      <img src="images/maps-icon.png" alt="Google Maps"> <!-- Added icon for Google Maps -->
+      <span>Google Maps</span>
+    </a>
   </div>
+</div>
 </div>
 </body>
 </html>
